Fixes for review comments from @davclaus